--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "organization": false
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.100.0",
+    "@aws-cdk/assert": "1.100.0",
     "@types/jest": "^26.0.22",
     "@types/node": "^12.0.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
@@ -42,23 +42,23 @@
     "typescript": "^4.2.4"
   },
   "peerDependencies": {
-    "@aws-cdk/aws-cloudfront": "^1.100.0",
-    "@aws-cdk/aws-lambda": "^1.100.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.100.0",
-    "@aws-cdk/aws-s3": "^1.100.0",
-    "@aws-cdk/aws-s3-deployment": "^1.100.0",
-    "@aws-cdk/core": "^1.100.0",
-    "@aws-cdk/custom-resources": "^1.100.0",
+    "@aws-cdk/aws-cloudfront": "1.100.0",
+    "@aws-cdk/aws-lambda": "1.100.0",
+    "@aws-cdk/aws-lambda-nodejs": "1.100.0",
+    "@aws-cdk/aws-s3": "1.100.0",
+    "@aws-cdk/aws-s3-deployment": "1.100.0",
+    "@aws-cdk/core": "1.100.0",
+    "@aws-cdk/custom-resources": "1.100.0",
     "constructs": "^3.2.27"
   },
   "dependencies": {
-    "@aws-cdk/aws-cloudfront": "^1.100.0",
-    "@aws-cdk/aws-lambda": "^1.100.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.100.0",
-    "@aws-cdk/aws-s3": "^1.100.0",
-    "@aws-cdk/aws-s3-deployment": "^1.100.0",
-    "@aws-cdk/core": "^1.100.0",
-    "@aws-cdk/custom-resources": "^1.100.0"
+    "@aws-cdk/aws-cloudfront": "1.100.0",
+    "@aws-cdk/aws-lambda": "1.100.0",
+    "@aws-cdk/aws-lambda-nodejs": "1.100.0",
+    "@aws-cdk/aws-s3": "1.100.0",
+    "@aws-cdk/aws-s3-deployment": "1.100.0",
+    "@aws-cdk/core": "1.100.0",
+    "@aws-cdk/custom-resources": "1.100.0"
   },
   "bundledDependencies": [],
   "keywords": [
@@ -75,7 +75,7 @@
   },
   "main": "lib/index.js",
   "license": "MIT",
-  "version": "1.100.10",
+  "version": "1.100.11",
   "jest": {
     "testMatch": [
       "**/__tests__/**/*.ts?(x)",
