--- a/package.json
+++ b/package.json
@@ -21,34 +21,33 @@
   "devDependencies": {
     "@aws-cdk/assert": "^2.49.0",
     "@types/jest": "^26.0.22",
-    "@types/node": "^12.20.43",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "esbuild": "^0.11.12",
-    "eslint": "^7.24.0",
-    "eslint-import-resolver-node": "^0.3.4",
-    "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "^2.22.1",
+    "@types/node": "^18.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
+    "esbuild": "^0.15.12",
+    "eslint": "^8.26.0",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint-plugin-import": "^2.26.0",
     "jest": "^26.6.3",
     "jest-junit": "^13.0.0",
-    "jsii": "^1.29.0",
-    "jsii-diff": "^1.29.0",
-    "jsii-docgen": "^1.8.68",
-    "jsii-pacmak": "^1.29.0",
+    "jsii": "^1.70.0",
+    "jsii-diff": "^1.70.0",
+    "jsii-docgen": "^7.0.131",
+    "jsii-pacmak": "^1.70.0",
     "json-schema": "^0.4.0",
     "standard-version": "^9",
     "ts-jest": "^26.5.5",
-    "typedoc": "^0.22.11",
-    "typescript": "^4.5.5",
-    "constructs": "10.0.0",
+    "typedoc": "^0.23.19",
+    "typescript": "^4.8.4",
+    "constructs": "^10.1.142",
     "aws-cdk-lib": "2.49.0"
   },
   "peerDependencies": {
     "constructs": "^10.0.0",
     "aws-cdk-lib": "^2.49.0"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "bundledDependencies": [],
   "keywords": [
     "angular",
@@ -64,7 +63,7 @@
   },
   "main": "lib/index.js",
   "license": "MIT",
-  "version": "2.49.1",
+  "version": "2.49.2",
   "jest": {
     "testMatch": [
       "**/__tests__/**/*.ts?(x)",
